[project]
name = "nanocortex"
version = "1.0.0"
description = "Minimal Snowflake Cortex Agent CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kevin Keller" }]
requires-python = ">=3.8"
keywords = ["snowflake", "cortex", "agent", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
full = [
    "snowflake-connector-python>=3.0",
    "cryptography>=3.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
nanocortex = "nanocortex:main"

[project.urls]
Repository = "https://github.com/sfc-gh-kkeller/nanocortex"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
